--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node node_modules/.bin/gulp build",
     "build-client": "node node_modules/.bin/gulp buildClient",
-    "clean": "node node_modules/.bin/gulp clean"
+    "clean": "node node_modules/.bin/gulp clean",
+    "watch": "node node_modules/.bin/gulp watch",
+    "start": "node node_modules/.bin/nodemon src/server/server.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,12 @@
     "gulp-concat": "^2.6.1",
     "gulp-minify": "^3.1.0",
     "gulp-template": "^5.0.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "nodemon": "^2.0.12"
+  },
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "socket.io": "^4.1.3"
   }
 }
